at first page ajqx loadadded public/scanv.html

--- a/.gitignore
+++ b/.gitignore
@@ -49,11 +49,12 @@ models.svg
 .yardopts                
 coverage                 
                          
-                         
+public/assets/iqtest/
 # Public Uploads         
 public/system/*
 #public/system/*     
 public/assets/           
+
 public/sitemap/          
                          
 # Public Cache           
