--- a/config/database.yml.example
+++ b/config/database.yml.example
@@ -2,7 +2,8 @@ production:
   adapter: mysql2
   encoding: utf8
   database: game
+  host: "10.66.31.210"
+  port: 1025
   pool: 5
   username: root
-  password: wan123
-  socket: /var/run/mysqld/mysqld.sock
+  password: wanhuir123
