--- a/config/database.yml.example
+++ b/config/database.yml.example
@@ -9,6 +9,16 @@ production:
   password: wanhuir123
   #socket: /var/run/mysqld/mysqld.sock
 
+development:
+  adapter: mysql2
+  encoding: utf8
+  database: game
+  host: "114.80.100.12"
+  port: 3306
+  pool: 5
+  username: root
+  password: roor123
+
 flash_buy:
    database: flash_buy
    adapter: mysql2
